--- a/articles.html
+++ b/articles.html
@@ -612,6 +612,7 @@
   </div>
   <script src="js/swiper.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/form.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/scrollbar.js"></script>
   <script>
