--- a/index.html
+++ b/index.html
@@ -865,7 +865,7 @@
                     <div class="header__select_selected_item" data-select-action data-select-open>
                       <div class="header__select_selected-title" data-select-title>Способ связи</div>
                       <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11 1L6.05 6L1 1"/>
+                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
                       </svg>
                     </div>
                     <div class="header__select_list" data-select-list>
@@ -881,7 +881,7 @@
                     <div class="header__select_selected_item" data-select-action data-select-open>
                       <div class="header__select_selected-title" data-select-title>Бюджет проекта</div>
                       <svg class="header__select_arrow" data-select-arrow width="12" height="7" viewBox="0 0 12 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M11 1L6.05 6L1 1" stroke="#262626"/>
+                        <path d="M11 1L6.05 6L1 1" stroke="currentColor"/>
                       </svg>
                     </div>
                     <div class="header__select_list" data-select-list>
