--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
                   </div>
                 </div>
                 <div class="header__forms_form_control">
-                  <span class="header__form_name">Опишите проект</span>
+                  <label for="text" class="header__form_name">Опишите проект</label>
                   <textarea class="header__forms_form_input header__forms_form_textarea" name="" id="text" placeholder=""></textarea>
                   <span class="header__forms_form_bar"></span>
                   <span class="header__forms_form_border"></span>
