--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </header>
   <main class="main" data-scroll-container>
     <div class="main__border"></div>
-    <section class="top" data-scroll-section id="top"></section>
+    <section class="top" data-scroll-section id="top"><div class="main__border"></div></section>
     <section class="digital" data-scroll-section>
       <div class="main__border"></div>
       <div class="container digital__container">
