--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
               <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
               <span class="button__hover"></span>
             </button>
-            <!-- <button class="btn button__briefing">
+            <button class="btn button__briefing">
               <span class="button__text">ОБРАТНАЯ СВЯЗЬ</span>
               <span class="button__hover"></span>
             </button>
             <button class="btn button__feedback">
               <span class="button__text">БРИФИНГ</span>
               <span class="button__hover"></span>
-            </button> -->
+            </button>
             <div class="header__consultation_burger_flex">
               <button class="header__consultation_burger" aria-label="Закрыть меню">
                 <svg width="23" height="22" viewBox="0 0 23 22" fill="none" xmlns="http://www.w3.org/2000/svg">
