--- a/privacy.html
+++ b/privacy.html
@@ -126,11 +126,11 @@
     <section class="privacy-page" data-scroll-section>
       <div class="main__border"></div>
       <div class="container breadcrumbs__container">
-        <h1 class="article__head page-title">Политика в отношении обработки персональных данных</h1>
-        <div class="rules-list">
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">1. Общие положения</h5>
-            <p class="rules-list__desc">Настоящая политика обработки персональных данных составлена в соответствии с
+        <h1 class="article__head">Политика в отношении обработки персональных данных</h1>
+        <div class="article__list">
+          <div class="article__item">
+            <h5 class="article__title">1. Общие положения</h5>
+            <p class="article__desc">Настоящая политика обработки персональных данных составлена в соответствии с
               требованиями Федерального закона от 27.07.2006. № 152-ФЗ «О персональных данных» (далее — Закон о
               персональных данных) и определяет порядок обработки персональных данных и меры по обеспечению безопасности
               персональных данных, предпринимаемые ООО "Эниера" (далее — Оператор).<br>
@@ -140,9 +140,9 @@
               1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее — Политика) применяется
               ко всей информации, которую Оператор может получить о посетителях веб-сайта https://anyera.ru.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">2. Основные понятия, используемые в Политике</h5>
-            <p class="rules-list__desc">2.1. Автоматизированная обработка персональных данных — обработка персональных
+          <div class="article__item">
+            <h5 class="article__title">2. Основные понятия, используемые в Политике</h5>
+            <p class="article__desc">2.1. Автоматизированная обработка персональных данных — обработка персональных
               данных с помощью средств вычислительной техники.<br>
               2.2. Блокирование персональных данных — временное прекращение обработки персональных данных (за
               исключением случаев, если обработка необходима для уточнения персональных данных).<br>
@@ -185,9 +185,9 @@
               информационной системе персональных данных и/или уничтожаются материальные носители персональных
               данных.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">3. Основные права и обязанности Оператора</h5>
-            <p class="rules-list__desc">
+          <div class="article__item">
+            <h5 class="article__title">3. Основные права и обязанности Оператора</h5>
+            <p class="article__desc">
               3.1. Оператор имеет право:<br>
               — получать от субъекта персональных данных достоверные информацию и/или документы, содержащие персональные
               данные;<br>
@@ -218,9 +218,9 @@
               и уничтожить персональные данные в порядке и случаях, предусмотренных Законом о персональных данных;<br>
               — исполнять иные обязанности, предусмотренные Законом о персональных данных.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">4. Основные права и обязанности субъектов персональных данных</h5>
-            <p class="rules-list__desc">
+          <div class="article__item">
+            <h5 class="article__title">4. Основные права и обязанности субъектов персональных данных</h5>
+            <p class="article__desc">
               4.1. Субъекты персональных данных имеют право:<br>
               — получать информацию, касающуюся обработки его персональных данных, за исключением случаев,
               предусмотренных федеральными законами. Сведения предоставляются субъекту персональных данных Оператором в
@@ -246,9 +246,9 @@
               персональных данных без согласия последнего, несут ответственность в соответствии с законодательством
               РФ.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">5. Принципы обработки персональных данных</h5>
-            <p class="rules-list__desc">5.1. Обработка персональных данных осуществляется на законной и справедливой
+          <div class="article__item">
+            <h5 class="article__title">5. Принципы обработки персональных данных</h5>
+            <p class="article__desc">5.1. Обработка персональных данных осуществляется на законной и справедливой
               основе.<br>
               5.2. Обработка персональных данных ограничивается достижением конкретных, заранее определенных и законных
               целей. Не допускается обработка персональных данных, несовместимая с целями сбора персональных данных.<br>
@@ -269,9 +269,9 @@
               уничтожаются либо обезличиваются по достижении целей обработки или в случае утраты необходимости в
               достижении этих целей, если иное не предусмотрено федеральным законом.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">6. Цели обработки персональных данных</h5>
-            <p class="rules-list__desc">Цель обработки — информирование Пользователя посредством отправки электронных
+          <div class="article__item">
+            <h5 class="article__title">6. Цели обработки персональных данных</h5>
+            <p class="article__desc">Цель обработки — информирование Пользователя посредством отправки электронных
               писем. Персональные данные:<br>
               — фамилия, имя, отчество<br>
               — электронный адрес<br>
@@ -281,9 +281,9 @@
               Виды обработки персональных данных:<br>
               — Сбор, запись, систематизация, накопление, хранение, уничтожение и обезличивание персональных данных</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">7. Условия обработки персональных данных</h5>
-            <p class="rules-list__desc">7.1. Обработка персональных данных осуществляется с согласия субъекта персональных
+          <div class="article__item">
+            <h5 class="article__title">7. Условия обработки персональных данных</h5>
+            <p class="article__desc">7.1. Обработка персональных данных осуществляется с согласия субъекта персональных
               данных на обработку его персональных данных.<br>7.2. Обработка персональных данных необходима для достижения
               целей, предусмотренных международным договором Российской Федерации или законом, для осуществления
               возложенных законодательством Российской Федерации на оператора функций, полномочий и обязанностей.<br>7.3.
@@ -300,9 +300,9 @@
               персональные данные).<br>7.7. Осуществляется обработка персональных данных, подлежащих опубликованию или
               обязательному раскрытию в соответствии с федеральным законом.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">8. Порядок сбора, хранения, передачи и других видов обработки персональных данных</h5>
-            <p class="rules-list__desc">Безопасность персональных данных, которые обрабатываются Оператором,
+          <div class="article__item">
+            <h5 class="article__title">8. Порядок сбора, хранения, передачи и других видов обработки персональных данных</h5>
+            <p class="article__desc">Безопасность персональных данных, которые обрабатываются Оператором,
               обеспечивается путем реализации правовых, организационных и технических мер, необходимых для выполнения в
               полном объеме требований действующего законодательства в области защиты персональных данных.<br>8.1.
               Оператор
@@ -338,17 +338,17 @@
               персональных данных, отзыв согласия субъектом персональных данных или требование о прекращении обработки
               персональных данных, а также выявление неправомерной обработки персональных данных.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">9. Перечень действий, производимых Оператором с полученными персональными данными</h5>
-            <p class="rules-list__desc">9.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение,
+          <div class="article__item">
+            <h5 class="article__title">9. Перечень действий, производимых Оператором с полученными персональными данными</h5>
+            <p class="article__desc">9.1. Оператор осуществляет сбор, запись, систематизацию, накопление, хранение,
               уточнение (обновление, изменение), извлечение, использование, передачу (распространение, предоставление,
               доступ), обезличивание, блокирование, удаление и уничтожение персональных данных.<br>9.2. Оператор осуществляет
               автоматизированную обработку персональных данных с получением и/или передачей полученной информации по
               информационно-телекоммуникационным сетям или без таковой.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">10. Трансграничная передача персональных данных</h5>
-            <p class="rules-list__desc">10.1. Оператор до начала осуществления деятельности по трансграничной передаче
+          <div class="article__item">
+            <h5 class="article__title">10. Трансграничная передача персональных данных</h5>
+            <p class="article__desc">10.1. Оператор до начала осуществления деятельности по трансграничной передаче
               персональных данных обязан уведомить уполномоченный орган по защите прав субъектов персональных данных о
               своем намерении осуществлять трансграничную передачу персональных данных (такое уведомление направляется
               отдельно от уведомления о намерении осуществлять обработку персональных данных).<br>10.2. Оператор до подачи
@@ -356,15 +356,15 @@
               физических лиц, иностранных юридических лиц, которым планируется трансграничная передача персональных
               данных, соответствующие сведения.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">11. Конфиденциальность персональных данных</h5>
-            <p class="rules-list__desc">Оператор и иные лица, получившие доступ к персональным данным, обязаны не
+          <div class="article__item">
+            <h5 class="article__title">11. Конфиденциальность персональных данных</h5>
+            <p class="article__desc">Оператор и иные лица, получившие доступ к персональным данным, обязаны не
               раскрывать третьим лицам и не распространять персональные данные без согласия субъекта персональных данных,
               если иное не предусмотрено федеральным законом.</p>
           </div>
-          <div class="rules-list__item">
-            <h5 class="rules-list__title">12. Заключительные положения</h5>
-            <p class="rules-list__desc">12.1. Пользователь может получить любые разъяснения по интересующим вопросам,
+          <div class="article__item">
+            <h5 class="article__title">12. Заключительные положения</h5>
+            <p class="article__desc">12.1. Пользователь может получить любые разъяснения по интересующим вопросам,
               касающимся обработки его персональных данных, обратившись к Оператору с помощью электронной почты
               <a href="mailto:info@anyera.ru">info@anyera.ru</a>.<br>12.2. В данном документе будут отражены любые
               изменения политики обработки персональных данных Оператором. Политика действует бессрочно до замены ее новой
