--- a/articles.html
+++ b/articles.html
@@ -105,8 +105,21 @@
     </div>
   </header>
   <main class="main" data-scroll-container>
-    <section class="top" data-scroll-section id="top"></section>
     <div class="main__border"></div>
+    <section class="top" data-scroll-section id="top"></section>
+    <section class="breadcrumbs" data-scroll-section>
+      <div class="main__border"></div>
+      <div class="container breadcrumbs__container">
+        <ul class="breadcrumbs__list">
+          <li class="breadcrumbs__item">
+            <a href="index.html" class="breadcrumbs__link">Главная</a>
+          </li>
+          <li class="breadcrumbs__item">
+            <a href="#" class="breadcrumbs__link">Статья</a>
+          </li>
+        </ul>
+      </div>
+    </section>
     <section class="articles" data-scroll-section>
       <div class="main__border"></div>
       <div class="container articles__container">
