--- a/article.html
+++ b/article.html
@@ -112,10 +112,10 @@
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Главная</a>
+            <a href="index.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Публикации</a>
+            <a href="article.html" class="breadcrumbs__link">Публикации</a>
           </li>
           <li class="breadcrumbs__item">
             <a href="#" class="breadcrumbs__link">Lorem ipsum dolor sit amet</a>
