--- a/privacy.html
+++ b/privacy.html
@@ -112,7 +112,7 @@
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Главная</a>
+            <a href="index.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li class="breadcrumbs__item">
             <a href="#" class="breadcrumbs__link">Документы</a>
