--- a/privacy.html
+++ b/privacy.html
@@ -112,13 +112,13 @@
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="index.html" class="breadcrumbs__link">Главная</a>
+            <a href="index.html" class="breadcrumbs__link text"><span>Главная</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Документы</a>
+            <a href="#" class="breadcrumbs__link text"><span>Документы</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Политика конфиденциальности</a>
+            <a href="#" class="breadcrumbs__link text"><span>Политика конфиденциальности</span></a>
           </li>
         </ul>
       </div>
