--- a/article.html
+++ b/article.html
@@ -112,13 +112,13 @@
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="index.html" class="breadcrumbs__link">Главная</a>
+            <a href="index.html" class="breadcrumbs__link text"><span>Главная</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="article.html" class="breadcrumbs__link">Публикации</a>
+            <a href="article.html" class="breadcrumbs__link text"><span>Публикации</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Lorem ipsum dolor sit amet</a>
+            <a href="#" class="breadcrumbs__link text"><span>Lorem ipsum dolor sit amet</span></a>
           </li>
         </ul>
         <ul class="breadcrumbs__tag_list">
