--- a/articles.html
+++ b/articles.html
@@ -112,10 +112,10 @@
       <div class="container breadcrumbs__container">
         <ul class="breadcrumbs__list">
           <li class="breadcrumbs__item">
-            <a href="index.html" class="breadcrumbs__link">Главная</a>
+            <a href="index.html" class="breadcrumbs__link text"><span>Главная</span></a>
           </li>
           <li class="breadcrumbs__item">
-            <a href="#" class="breadcrumbs__link">Статья</a>
+            <a href="#" class="breadcrumbs__link text"><span>Статья</span></a>
           </li>
         </ul>
       </div>
