--- a/article.html
+++ b/article.html
@@ -122,8 +122,8 @@
           </li>
         </ul>
         <ul class="breadcrumbs__tag_list">
-          <li class="breadcrumbs__tag_item">
-            <span class="breadcrumbs__name">#animation</span>
+          <li class="breadcrumbs__tag__item">
+            <span class="breadcrumbs___name">#animation</span>
           </li>
           <li class="breadcrumbs__tag__item">
             <span class="breadcrumbs___name">#design</span>
