--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
   <div class="showreel__modal">
     <div class="showreel__modal_inner">
       <div class="showreel__video_responsive">
-        <video id="showreel__video" poster="img/main/showreel.webp" playsinline autoplay muted loop data-overlay="1" data-title="ANYERA">
+        <video id="showreel__video" poster="img/main/showreel.webp" playsinline autoplay loop data-overlay="1" data-title="ANYERA">
           <source src="img/main/showreel.mp4" type="video/mp4">
         </video>
       </div>
