--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
         <div class="accredited__flex">
           <ul class="accredited__list">
             <li class="accredited__item">
-              <h5 class="accredited__head">ACCREDITED IT COMPANY</h5>
-              <p class="accredited__desc">The Ministry of Digital Development of the Russian Federation confirms that we are a reliable contractor.</p>
+              <h5 class="accredited__head">IT-Аккредитованы</h5>
+              <p class="accredited__desc">Мы успешно прошли аккредитацию Министерства цифрового развития Российской сертификации по новым требованиям 2023 года.</p>
             </li>
             <li class="accredited__item">
-              <h5 class="accredited__head">BITRIX PARTNER</h5>
-              <p class="accredited__desc">We are officially a partner of Bitrix and provide licenses for your sites.</p>
+              <h5 class="accredited__head">Партнер 1С-Битрикс</h5>
+              <p class="accredited__desc">Не смотря на небольшой срок существования нашей компании мы уже сертифицированный партнер компании Битрикс</p>
             </li>
           </ul>
         </div>
@@ -184,7 +184,7 @@
         <div class="expertise__block" data-scroll>
           <div class="expertise__left">
             <button class="expertise__button">
-              <h4 class="expertise__heading">Frontend-разработчик</h4>
+              <h4 class="expertise__heading">Аналитика</h4>
               <div class="btn__arrow expertise__btn">
                 <div class="btn__side btn__side_default">
                   <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -209,7 +209,7 @@
               </ul>
             </div>
             <button class="expertise__button">
-              <h4 class="expertise__heading">PHP-разработчик</h4>
+              <h4 class="expertise__heading">Цифровой дизайн</h4>
               <div class="btn__arrow expertise__btn">
                 <div class="btn__side btn__side_default">
                   <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -234,7 +234,7 @@
               </ul>
             </div>
             <button class="expertise__button">
-              <h4 class="expertise__heading">Бизнес-аналитик</h4>
+              <h4 class="expertise__heading">Веб-разработка</h4>
               <div class="btn__arrow expertise__btn">
                 <div class="btn__side btn__side_default">
                   <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -259,7 +259,7 @@
               </ul>
             </div>
             <button class="expertise__button">
-              <h4 class="expertise__heading">Digital-маркетолог</h4>
+              <h4 class="expertise__heading">Поддержка</h4>
               <div class="btn__arrow expertise__btn">
                 <div class="btn__side btn__side_default">
                   <svg width="9" height="9" viewBox="0 0 9 9" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -530,7 +530,7 @@
                     </div>
                     <div class="articles__info">
                       <h5 class="articles__head">В Поиске вдохновения</h5>
-                      <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
+                      <p class="articles__desc">агентство ipsum.</p>
                     </div>
                   </a>
                 </li>
