--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
                       <span class="articles__date">31.07.2023</span>
                     </div>
                     <div class="articles__info">
-                      <h5 class="articles__head">В Поиске вдохновения</h5>
+                      <h5 class="articles__head">В Поиске</h5>
                       <p class="articles__desc">агентство ipsum.</p>
                     </div>
                   </a>
