--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </svg>
     <div class="preloader__bottom"></div>
   </div>
+  <div class="cursor"></div>
   <header class="header">
     <div class="header__progress">
       <div class="header__progress_bar"></div>
