--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,7 @@
     </svg>
     <div class="preloader__bottom"></div>
   </div>
-  <div class="cursor"><span></span></div>
+  <div class="cursor"></div>
   <header class="header">
     <div class="header__progress">
       <div class="header__progress_bar"></div>
