--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer" id="footer__dot" data-scroll-section>
+    <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
           <div class="footer__flex">
