--- a/privacy.html
+++ b/privacy.html
@@ -377,7 +377,7 @@
         <p class="privacy-page__date">20.03.2023</p>
       </div>
     </section>
-    <footer class="footer" id="footer__dot" data-scroll-section>
+    <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
           <div class="footer__flex">
