--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
         <div class="accredited__flex">
           <ul class="accredited__list">
             <li class="accredited__item">
-              <h5 class="accredited__head">IT-Аккредитованы</h5>
+              <h4 class="accredited__head">IT-Аккредитованы</h4>
               <p class="accredited__desc">Мы успешно прошли аккредитацию Министерства цифрового развития Российской сертификации по новым требованиям 2023 года.</p>
             </li>
             <li class="accredited__item">
-              <h5 class="accredited__head">Партнер 1С-Битрикс</h5>
+              <h4 class="accredited__head">Партнер 1С-Битрикс</h4>
               <p class="accredited__desc">Не смотря на небольшой срок существования нашей компании мы уже сертифицированный партнер компании Битрикс</p>
             </li>
           </ul>
@@ -202,7 +202,7 @@
             <div class="expertise__panel">
               <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
               <br>
-              <span>В нашем арсенале:</span>
+              <b>В нашем арсенале:</b>
               <ul>
                 <li>· Продуктовая и маркетинговая аналитика</li>
                 <li>· UX - исследование</li>
@@ -227,7 +227,7 @@
             <div class="expertise__panel">
               <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
               <br>
-              <span>В нашем арсенале:</span>
+              <b>В нашем арсенале:</b>
               <ul>
                 <li>· Продуктовая и маркетинговая аналитика</li>
                 <li>· UX - исследование</li>
@@ -252,7 +252,7 @@
             <div class="expertise__panel">
               <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
               <br>
-              <span>В нашем арсенале:</span>
+              <b>В нашем арсенале:</b>
               <ul>
                 <li>· Продуктовая и маркетинговая аналитика</li>
                 <li>· UX - исследование</li>
@@ -277,7 +277,7 @@
             <div class="expertise__panel">
               <p>Предпочитаем обоснованный дизайн, функциональный и приносящий пользу своим владельцам. Поэтому проводим исследования пользовательского опыта и продукта, чтобы полностью убедиться в рентабельности проекта</p>
               <br>
-              <span>В нашем арсенале:</span>
+              <b>В нашем арсенале:</b>
               <ul>
                 <li>· Продуктовая и маркетинговая аналитика</li>
                 <li>· UX - исследование</li>
@@ -335,7 +335,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">Fin Fine</h6>
+                  <h4 class="projects__heading">Fin Fine</h4>
                   <p class="projects__description">Финансовый трекер</p>
                 </div>
               </a>
@@ -358,7 +358,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">Volleybox</h6>
+                  <h4 class="projects__heading">Volleybox</h4>
                   <p class="projects__description">Сервис для волейбольного клуба</p>
                 </div>
               </a>
@@ -400,7 +400,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">Feliksov Diamonds</h6>
+                  <h4 class="projects__heading">Feliksov Diamonds</h4>
                   <p class="projects__description">Интернет-каталог ювелирных изделий</p>
                 </div>
               </a>
@@ -423,7 +423,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">ArtHomeDecor</h6>
+                  <h4 class="projects__heading">ArtHomeDecor</h4>
                   <p class="projects__description">Магазин мебели</p>
                 </div>
               </a>
@@ -465,7 +465,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">Агрочемпион</h6>
+                  <h4 class="projects__heading">Агрочемпион</h4>
                   <p class="projects__description">Корпоративный сайт и каталог сельхоз техники</p>
                 </div>
               </a>
@@ -488,7 +488,7 @@
                   </div>
                 </div>
                 <div class="projects__info">
-                  <h6 class="projects__heading">АСО</h6>
+                  <h4 class="projects__heading">АСО</h4>
                   <p class="projects__description">Аренда строительной опалубки</p>
                 </div>
               </a>
@@ -518,7 +518,7 @@
                       <span class="articles__date">31.07.2023</span>
                     </div>
                     <div class="articles__info">
-                      <h5 class="articles__head">Как мы искали название</h5>
+                      <h4 class="articles__head">Как мы искали название</h4>
                       <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
                     </div>
                   </a>
@@ -530,7 +530,7 @@
                       <span class="articles__date">31.07.2023</span>
                     </div>
                     <div class="articles__info">
-                      <h5 class="articles__head">В Поиске</h5>
+                      <h4 class="articles__head">В Поиске</h4>
                       <p class="articles__desc">агентство ipsum.</p>
                     </div>
                   </a>
@@ -542,7 +542,7 @@
                       <span class="articles__date">31.07.2023</span>
                     </div>
                     <div class="articles__info">
-                      <h5 class="articles__head">Как создать команду мечты</h5>
+                      <h4 class="articles__head">Как создать команду мечты</h4>
                       <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
                     </div>
                   </a>
@@ -554,7 +554,7 @@
                       <span class="articles__date">31.07.2023</span>
                     </div>
                     <div class="articles__info">
-                      <h5 class="articles__head">Работаем и отдыхаем на бали</h5>
+                      <h4 class="articles__head">Работаем и отдыхаем на бали</h4>
                       <p class="articles__desc">Немного о наших  долгих поисках названия в тчении 2х лет Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. О его собрал силуэт назад вдали пояс предупредила повстречался правилами до города грустный свой запятой своих меня, однажды агентство ipsum.</p>
                     </div>
                   </a>
@@ -602,15 +602,15 @@
                 <p class="footer__mail_info">Напишите нам:</p>
                 <a href="mailto:hello@anyera.ru" class="footer__mail_send">
                   <h5 class="header__nav_contact_head text text__big">
-                    <span class="text__rotate">HELLO@ANYERA.RU</span>
+                    <span class="text__rotate">hello@anyera.ru</span>
                   </h5>
                 </a>
               </div>
               <div class="footer__contact">
                 <a href="tel:+79270030100" class="footer__contact_tel">
-                  <h5 class="header__nav_contact_head text text__big">
+                  <h3 class="header__nav_contact_head text text__big">
                     <span class="text__rotate">8 927 003 01 00</span>
-                  </h5>
+                  </h3>
                 </a>
                 <p class="footer__contact_info">443122, Россия, Самарская обл., <br>Самара, Георгия Димитрова, д 81</p>
               </div>
@@ -712,39 +712,29 @@
           <div class="header__nav_flex">
             <ul class="header__nav_list">
               <li class="header__nav_item">
-                <h3>
-                  <a href="index.html" class="header__nav_link text">
-                    <span>Услуги</span>
-                  </a>
-                </h3>
+                <a href="index.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Услуги</span></h3>
+                </a>
               </li>
               <li class="header__nav_item">
-                <h3>
-                  <a href="projects.html" class="header__nav_link text">
-                    <span>Команда</span>
-                  </a>
-                </h3>
+                <a href="projects.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Команда</span></h3>
+                </a>
               </li>
               <li class="header__nav_item">
-                <h3>
-                  <a href="services.html" class="header__nav_link text">
-                    <span>Проекты</span>
-                  </a>
-                </h3>
+                <a href="services.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Проекты</span></h3>
+                </a>
               </li>
               <li class="header__nav_item">
-                <h3>
-                  <a href="team.html" class="header__nav_link text">
-                    <span>Карьера</span>
-                  </a>
-                </h3>
+                <a href="team.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Карьера</span></h3>
+                </a>
               </li>
               <li class="header__nav_item">
-                <h3>
-                  <a href="public.html" class="header__nav_link text">
-                    <span>Статьи</span>
-                  </a>
-                </h3>
+                <a href="public.html" class="header__nav_link">
+                  <h3 class="text text__big"><span class="text__rotate">Статьи</span></h3>
+                </a>
               </li>
             </ul>
             <div class="header__nav__contact">
@@ -752,17 +742,17 @@
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Сall us by number:</p>
                   <a href="tel:+79270030100" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head text text__big">
+                    <h4 class="header__nav_contact_head text text__big">
                       <span class="text__rotate">8 927 003 01 00</span>
-                    </h5>
+                    </h4>
                   </a>
                 </li>
                 <li class="header__nav_contact_item">
                   <p class="header__nav_contact_desc">Write to our mail:</p>
                   <a href="mailto:hello@anyera.ru" class="header__nav_contact_link">
-                    <h5 class="header__nav_contact_head text text__big">
-                      <span class="text__rotate">HELLO@ANYERA.RU</span>
-                    </h5>
+                    <h4 class="header__nav_contact_head text text__big">
+                      <span class="text__rotate">hello@anyera.ru</span>
+                    </h4>
                   </a>
                 </li>
               </ul>
@@ -807,7 +797,7 @@
                       <path d="M18.4896 4.92516L15.8542 7.02412L16.8021 10.3348L14.0625 8.37654L11.323 10.3348L12.2709 7.02412L9.63546 4.92516L12.9584 4.82778L14.0625 1.58197L15.1667 4.82778L18.4896 4.92516ZM22.1355 12.4013L20.4271 13.7538L21.0417 15.896L19.2709 14.6301L17.5 15.896L18.1146 13.7538L16.4063 12.4013L18.5521 12.3472L19.2709 10.2375L19.9896 12.3472L22.1355 12.4013ZM19.7605 17.7569C20.625 17.6704 21.5521 18.9471 21 19.7585C20.6667 20.2454 20.3125 20.6998 19.875 21.1326C15.8021 25.3846 9.20837 25.3846 5.14587 21.1326C1.07296 16.913 1.07296 10.0535 5.14587 5.83398C5.56254 5.40121 6.00004 5.01171 6.46879 4.66549C7.25004 4.09207 8.47921 5.05499 8.39587 5.953C8.11462 9.04734 9.11462 12.2607 11.4063 14.6301C13.6875 17.0104 16.7709 18.0491 19.7605 17.7569ZM18.0521 19.9425C15.1042 19.7693 12.1875 18.5035 9.92712 16.1881C7.66671 13.8187 6.45837 10.7784 6.29171 7.72738C3.36462 11.1247 3.47921 16.3396 6.61462 19.6071C9.76046 22.8637 14.7813 22.9827 18.0521 19.9425Z" fill="currentColor"/>
                     </svg>
                   </button>
-                  <span class="header__set_mode_name"></span>
+                  <button class="header__set_mode_name"></button>
                   <button class="header__set_mode_btn" data-clr-mode="light">
                     <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path d="M3.84091 20.3854L5.36644 21.8541L7.31393 19.9895L5.77758 18.5104M12.9833 6.74996C9.40207 6.74996 6.49166 9.55204 6.49166 13C6.49166 16.4479 9.40207 19.25 12.9833 19.25C16.5645 19.25 19.4749 16.4479 19.4749 13C19.4749 9.54163 16.5645 6.74996 12.9833 6.74996ZM21.6388 14.0416H24.8846V11.9583H21.6388M18.6526 19.9895L20.6001 21.8541L22.1257 20.3854L20.189 18.5104M22.1257 5.70829L20.6001 4.24996L18.6526 6.11454L20.189 7.59371M14.0652 1.54163H11.9013V4.66663H14.0652M7.31393 6.11454L5.36644 4.24996L3.84091 5.70829L5.77758 7.59371L7.31393 6.11454ZM1.08197 14.0416H4.32778V11.9583H1.08197M14.0652 21.3333H11.9013V24.4583H14.0652" fill="currentColor"/>
