--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         </button>
         <div class="header__right">
           <div class="header__links">
-            <a class="header__link text" href="#"><span class="text__rotate">Команда</span></a>
-            <a class="header__link text" href="#"><span class="text__rotate">Проекты</span></a>
+            <a class="header__link text text__big" href="#"><span class="text__rotate">Команда</span></a>
+            <a class="header__link text text__big" href="#"><span class="text__rotate">Проекты</span></a>
           </div>
           <div class="header__buttons">
             <button class="btn button__project">
@@ -497,7 +497,7 @@
         </div>
       </div>
     </section>
-    <section class="articles" data-scroll-section>
+    <!-- <section class="articles" data-scroll-section>
       <div class="main__border"></div>
       <div class="container articles__container">
         <div class="articles__block">
@@ -592,7 +592,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <footer class="footer" data-scroll-section>
       <div class="container footer__container">
         <div class="footer__block">
