del animation projects

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
       </div>
     </section>
     <section class="projects parallax" data-scroll-section>
-      <div class="projects__block" id="scroll__one">
+      <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-sticky data-scroll-target="#scroll__one">
+        <div class="container projects__container">
           <div class="projects__flex">
             <h3 class="projects__head">Products &amp; Services</h3>
             <div class="projects__right">
@@ -368,9 +368,9 @@
       </div>
     </section>
     <section class="projects parallax" data-scroll-section>
-      <div class="projects__block" id="scroll__two">
+      <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-sticky data-scroll-target="#scroll__two">
+        <div class="container projects__container">
           <div class="projects__flex">
             <h3 class="projects__head">eCommerce</h3>
             <div class="projects__right">
@@ -433,9 +433,9 @@
       </div>
     </section>
     <section class="projects parallax" data-scroll-section>
-      <div class="projects__block" id="scroll__three">
+      <div class="projects__block">
         <div class="main__border"></div>
-        <div class="container projects__container" data-scroll data-scroll-sticky data-scroll-target="#scroll__three">
+        <div class="container projects__container">
           <div class="projects__flex">
             <h3 class="projects__head">Corporative Site</h3>
             <div class="projects__right">
