--- a/index.html
+++ b/index.html
@@ -694,8 +694,8 @@
             </a>
             <a data-scroll-to href="#top" class="btn footer__button">
               <span class="button__text">
-                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="17" viewBox="0 0 32 17" fill="none">
-                  <path d="M1 16L15.85 0.999999L31 16" stroke="currentColor"/>
+                <svg width="42" height="22" viewBox="0 0 42 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M1 21.3333L20.8 1.33325L41 21.3333" stroke="#6C6C6C" stroke-width="1.40472"/>
                 </svg>
               </span>
               <span class="button__hover"></span>
