--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <a href="policy.html" class="footer__privacy text">
               <span class="text__rotate">Политика конфиденциальности</span>
             </a>
-            <a data-scroll-to href="#top" class="btn footer__button">
+            <a data-scroll-to href="#top" class="btn footer__button_up">
               <span class="button__text">
                 <svg width="42" height="22" viewBox="0 0 42 22" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M1 21.3333L20.8 1.33325L41 21.3333" stroke="#6C6C6C" stroke-width="1.40472"/>
