--- a/index.html
+++ b/index.html
@@ -756,6 +756,10 @@
                   </a>
                 </li>
               </ul>
+              <button class="btn button__project_two">
+                <span class="button__text">ОБСУДИТЬ ПРОЕКТ</span>
+                <span class="button__hover"></span>
+              </button>
               <ul class="header__nav_bottom_social" data-scroll data-scroll-speed="0">
                 <li>
                   <a href="https://t.me/anyera" target="_blank" class="header__nav_bottom_link">
