--- a/projects.html
+++ b/projects.html
@@ -124,13 +124,13 @@
                     <span><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1.5L8.95181 8.5L16 1.5" stroke="currentColor" stroke-width="2"></path></svg></span>
                   </button>
                   <ul class="projects__filter_sublist">
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 1</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 2</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 3</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 4</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 5</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 6</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Отрасль 7</span><span class="button__hover"></span></button></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 1<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 2<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 3<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 4<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 5<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 6<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Отрасль 7<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
                   </ul>
                 </li>
                 <li class="projects__filter_item">
@@ -138,13 +138,13 @@
                     <span><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1.5L8.95181 8.5L16 1.5" stroke="currentColor" stroke-width="2"></path></svg></span>
                   </button>
                   <ul class="projects__filter_sublist">
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 1</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 2</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 3</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 4</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 5</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 6</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Тип сайта 7</span><span class="button__hover"></span></button></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 1<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 2<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 3<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 4<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 5<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 6<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Тип сайта 7<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
                   </ul>
                 </li>
                 <li class="projects__filter_item">
@@ -152,16 +152,17 @@
                     <span><svg width="17" height="10" viewBox="0 0 17 10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M1 1.5L8.95181 8.5L16 1.5" stroke="currentColor" stroke-width="2"></path></svg></span>
                   </button>
                   <ul class="projects__filter_sublist">
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 1</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 2</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 3</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 4</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 5</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 6</span><span class="button__hover"></span></button></li>
-                    <li class="projects__filter_subitem"><button class="btn projects__filter_check"><span class="button__text">Услуга 7</span><span class="button__hover"></span></button></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 1<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 2<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 3<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 4<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 5<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 6<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
+                    <li class="projects__filter_subitem"><label class="btn projects__filter_label"><span class="button__text button__count">Услуга 7<small>4</small></span><span class="button__hover"></span><input class="projects__filter_check" type="checkbox"></label></li>
                   </ul>
                 </li>
               </ul>
+              <button class="projects__filter_clear"><svg width="13" height="14" viewBox="0 0 13 14" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.677238 12.1401C0.420219 12.3971 0.420219 12.8138 0.677238 13.0708C0.934257 13.3278 1.35097 13.3278 1.60799 13.0708L6.72705 7.95175L11.8461 13.0708C12.1031 13.3278 12.5198 13.3278 12.7769 13.0708C13.0339 12.8138 13.0339 12.3971 12.7769 12.1401L7.6578 7.021L12.777 1.90183C13.034 1.64481 13.034 1.2281 12.777 0.971084C12.5199 0.714065 12.1032 0.714066 11.8462 0.971085L6.72705 6.09025L1.60789 0.971091C1.35087 0.714072 0.934158 0.714072 0.677139 0.971091C0.42012 1.22811 0.42012 1.64482 0.677139 1.90184L5.7963 7.021L0.677238 12.1401Z" fill="currentColor"></path></svg>Очистить всё</button>
             </div>
           </div>
           <ul class="projects__list">
