--- a/projects.html
+++ b/projects.html
@@ -376,22 +376,22 @@
               <ul class="footer__list">
                 <li class="footer__item">
                   <a href="#" class="footer__link text">
-                    <span class="text__rotate">Услуги</span>
+                    <span class="text__rotate text__big">Услуги</span>
                   </a>
                 </li>
                 <li class="footer__item">
                   <a href="#" class="footer__link text">
-                    <span class="text__rotate">Карьера</span>
+                    <span class="text__rotate text__big">Карьера</span>
                   </a>
                 </li>
                 <li class="footer__item">
                   <a href="#" class="footer__link text">
-                    <span class="text__rotate">Медиа</span>
+                    <span class="text__rotate text__big">Медиа</span>
                   </a>
                 </li>
                 <li class="footer__item">
                   <a href="#" class="footer__link text">
-                    <span class="text__rotate">Документы</span>
+                    <span class="text__rotate text__big">Документы</span>
                   </a>
                 </li>
               </ul>
