--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
             <a data-scroll-to href="#top" class="btn footer__button_up">
               <span class="button__text">
                 <svg width="42" height="22" viewBox="0 0 42 22" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M1 21.3333L20.8 1.33325L41 21.3333" stroke="#6C6C6C" stroke-width="1.40472"/>
+                  <path d="M1 21.3333L20.8 1.33325L41 21.3333" stroke="currentColor" stroke-width="1.40472"/>
                 </svg>
               </span>
               <span class="button__hover"></span>
