--- a/project.html
+++ b/project.html
@@ -110,11 +110,11 @@
       <div class="container project_top__container">
         <div class="project_top__block">
           <div class="project_top__info">
-            <div class="project_top__head">FinFine</div>
-            <div class="project_top__desc">Финансовый трекер</div>
+            <h1 class="project_top__head">FinFine</h1>
+            <h4 class="project_top__desc">Финансовый трекер</h4>
           </div>
           <div class="project_top__image">
-            <img src="" alt="">
+            <img src="img/project/project_1/project_top.webp" alt="">
           </div>
         </div>
       </div>
