--- a/project.html
+++ b/project.html
@@ -110,8 +110,14 @@
       <div class="container project_top__container">
         <div class="project_top__block">
           <div class="project_top__info">
-            <h1 class="project_top__head">FinFine</h1>
-            <h4 class="project_top__desc">Финансовый трекер</h4>
+            <div class="project_top__info_block">
+              <h1 class="project_top__head">FinFine</h1>
+              <h4 class="project_top__desc">Финансовый трекер</h4>
+            </div>
+            <a href="#" target="_blank" class="btn project_top__button">
+              <span class="button__text">Веб-сайт</span>
+              <span class="button__hover"></span>
+            </a>
           </div>
           <div class="project_top__image">
             <img src="img/project/project_1/project_top.webp" alt="">
